fix: fix address

--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,12 @@ description: > # this means to ignore newlines until "baseurl:"
   Projeto Residência em TIC da BRISA - UnB FGA
 permalink: ':title/'
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://guilhermedfs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://template-pages-lappis.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author: 
 author-img: lappis.png
 about-author: Residência BRISA
-social-twitter: 
-social-github: 
-social-linkedin: 
 social-email: caguiar@unb.br
 
 # Build Settings
