--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Residência BRISA
 description: > # this means to ignore newlines until "baseurl:"
   Projeto Residência em TIC da BRISA - UnB FGA
 permalink: ':title/'
-baseurl: "template-pages-lappis" # the subpath of your site, e.g. /blog
-url: "http://guilhermedfs.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://guilhermedfs.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author: 
