--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Residência BRISA
 description: > # this means to ignore newlines until "baseurl:"
   Projeto Residência em TIC da BRISA - UnB FGA
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/template-pages-lappis" # the subpath of your site, e.g. /blog
 url: "https://guilhermedfs.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
