--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Projeto Residência em TIC da BRISA - UnB FGA
 permalink: ':title/'
 baseurl: "/template-pages-lappis" # the subpath of your site, e.g. /blog
-url: "https://guilhermedfs.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://guilhermedfs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author: 
